# async-web-crawler

./: .env  .gitignore  Makefile  README.md  playground.py  pyproject.toml  todo.md  urls.txt
crawler/: app.py  downloader.py  files.py  main.py  urls.py
crawler/templates/: index.html
crawler/tests/: downloader.py  test_crawler.py
