[tool.poetry]
name = "async-web-crawler"
version = "0.1.0"
description = ""
authors = ["cyrilmcshow <st077217@student.spbu.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
requests = "^2.31.0"
aiofiles = "^23.2.1"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
